Fixes alignment issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -203,15 +203,6 @@ nav {
 	background-color: darken(@color-swatch1,5%);
 }
 
-.widget.extendednavigation ul {
-  display: table;
-  margin: 0 auto;
-  text-align: center;
-  li.folder ul {
-    text-align: left;
-  }
-}
-
 /* ===============================
    4. TYPE
    =============================== */
@@ -1600,10 +1591,6 @@ select {
 			&:hover ul {
 				margin: 0;
 			}
-			.text {
-				margin:0px auto;
-				display:table;
-			}
       &.folder li {
         border: none;
         &:first-child {
@@ -1624,14 +1611,6 @@ select {
 		width: 100%!important;
 		left: auto;
 	}	
-
-	.widget .extendednavigation ul.align-left li {
-		text-align:center;
-	}
-
-	ul.align-left li, button.justifyleft, .widget-align-left {
-		text-align:center;
-	}
 
 	.widget .extendednavigation a.pull {
 		width: 20px;
